--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,13 @@ __pycache__/
 .ipynb_checkpoints/
 
 # Fichiers data CSV
-data/*.csv
+data/application_test.csv
+data/application_train.csv
+data/bureau.csv
+data/bureau_balance.csv
+data/credit_card_balance.csv
+data/HomeCredit_columns_description.csv
+data/installments_payments.csv
+data/POS_CASH_balance.csv
+data/previous_application.csv
+data/sample_submission.csv
