Ajout de Projet7_OpenClassrooms.git/ au .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ data/installments_payments.csv
 data/POS_CASH_balance.csv
 data/previous_application.csv
 data/sample_submission.csv
+
+# Dépot Git
+Projet7_OpenClassrooms.git/
