--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,32 @@
-name: CI
+name: Python CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+      - ajout-tests-ci
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.8'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.8
 
-      - name: Install dependencies
-        run: |
-          pip install pytest lightgbm scikit-learn
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r 3_dossier_code_012025/requirements.txt
 
-      - name: Run tests
-        run: pytest 3_dossier_code_012025/tests/
+    - name: Run tests
+      run: |
+        pytest 3_dossier_code_012025/tests/
