--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: List files in repository
+      run: |
+        ls -R
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
