--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test:
-    runs-on: windows-latest  # Utilisation d'un runner Windows
+    runs-on: windows-latest  # Utilisation de Windows pour correspondre à l'environnement local
 
     steps:
     - name: Checkout repository
@@ -19,23 +19,18 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: List all files
+    - name: Print current directory and list files
       run: |
-        Get-ChildItem -Recurse
-
-    - name: Print current working directory
-      run: |
-        cd
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.8
+        echo "Current directory:"
+        pwd
+        echo "Contents:"
+        ls -al
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r 3_dossier_code_012025/requirements.txt
+        pip install -r requirements.txt
+        # Pour Linux, remplacez ls par "dir /s"
 
     - name: Run tests
       run: |
