--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,26 +11,28 @@ on:
 
 jobs:
   test:
-    runs-on: windows-latest  # Utilisation de Windows pour correspondre à l'environnement local
+    runs-on: windows-latest  # Environnement Windows pour correspondre à Anaconda
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
 
     - name: Print current directory and list files
       run: |
         echo "Current directory:"
         pwd
         echo "Contents:"
-        ls -al
+        Get-ChildItem -Recurse
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.8
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        # Pour Linux, remplacez ls par "dir /s"
+        pip install -r 3_dossier_code_012025/requirements.txt
 
     - name: Run tests
       run: |
