--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
 argon2-cffi-bindings @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/argon2-cffi-bindings_1699549801117/work
 arrow==1.3.0
 astroid==3.2.4
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
+asttokens==3.0.0
 astunparse==1.6.3
 async-lru @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/async-lru_1701796859357/work
 attrs @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/attrs_1699473735254/work
@@ -24,24 +24,24 @@ botocore @ file:///home/conda/feedstock_root/build_artifacts/botocore_1736297140
 Bottleneck @ file:///C:/b/abs_f7un855idq/croot/bottleneck_1709069969633/work
 Brotli @ file:///C:/b/abs_3d36mno480/croot/brotli-split_1714483178642/work
 cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1733624221485/work
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1734380492396/work/certifi
+certifi @ file:///C:/b/abs_59o0xj7aav/croot/certifi_1734473304008/work/certifi
 cffi @ file:///C:/b/abs_78eb1_vq6z/croot/cffi_1714483206096/work
 charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
 click==8.1.7
 cloudpickle==3.0.0
-colorama @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/colorama_1699472650914/work
-comm @ file:///C:/b/abs_67a8058udb/croot/comm_1709322909844/work
+colorama==0.4.6
+comm==0.2.2
 contourpy==1.3.0
 cryptography @ file:///C:/b/abs_e2lzchf4i6/croot/cryptography_1732130411942/work
 cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
 databricks-sdk @ file:///home/conda/feedstock_root/build_artifacts/databricks-sdk_1734663834019/work
-debugpy @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/debugpy_1699554994633/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+debugpy==1.8.12
+decorator==5.1.1
 defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
 Deprecated @ file:///home/conda/feedstock_root/build_artifacts/deprecated_1733662579792/work
 dill==0.3.8
 docker @ file:///home/conda/feedstock_root/build_artifacts/docker-py_1734056256783/work
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+executing==2.1.0
 fastjsonschema @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/python-fastjsonschema_1699475134300/work
 filelock==3.16.1
 flake8==7.1.1
@@ -74,14 +74,14 @@ importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib
 importlib_resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1736252299705/work
 iniconfig==2.0.0
 ipycache==0.1.4
-ipykernel @ file:///C:/b/abs_c2u94kxcy6/croot/ipykernel_1705933907920/work
-ipython @ file:///C:/b/abs_b6pfgmrqnd/croot/ipython_1704833422163/work
+ipykernel==6.29.5
+ipython==8.31.0
 ipython-genutils==0.2.0
 ipywidgets @ file:///C:/b/abs_25rsd7yhd4/croot/ipywidgets_1709575117021/work
 isoduration==20.11.0
 isort==5.13.2
 itsdangerous @ file:///home/conda/feedstock_root/build_artifacts/itsdangerous_1733308265247/work
-jedi @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jedi_1699484554909/work
+jedi==0.19.2
 Jinja2 @ file:///C:/b/abs_92fccttino/croot/jinja2_1716993447201/work
 jmespath @ file:///home/conda/feedstock_root/build_artifacts/jmespath_1733229141657/work
 joblib @ file:///C:/b/abs_4b02c83r3b/croot/joblib_1713976789617/work
@@ -97,8 +97,8 @@ jupyter-events @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/j
 jupyter-highlight-selected-word==0.2.0
 jupyter-lsp @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jupyter-lsp-meta_1701806528286/work
 jupyter-nbextensions-configurator==0.6.3
-jupyter_client @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jupyter_client_1701796382758/work
-jupyter_core @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jupyter_core_1701796658071/work
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 jupyter_server @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jupyter_server_1701806473214/work
 jupyter_server_terminals @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jupyter_server_terminals_1701798041635/work
 jupyterlab @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jupyterlab_1709157383358/work
@@ -118,7 +118,7 @@ Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1710435156
 markdown-it-py==3.0.0
 MarkupSafe @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/markupsafe_1707425732791/work
 matplotlib==3.8.4
-matplotlib-inline @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/matplotlib-inline_1699484796387/work
+matplotlib-inline==0.1.7
 mccabe==0.7.0
 mdurl==0.1.2
 missingno==0.5.2
@@ -137,7 +137,7 @@ nbclient @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/nbclien
 nbconvert @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/nbconvert_1701806279884/work
 nbformat @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/nbformat_1701796704118/work
 nbqa==1.9.0
-nest-asyncio @ file:///C:/b/abs_65d6lblmoi/croot/nest-asyncio_1708532721305/work
+nest-asyncio==1.6.0
 networkx==3.3
 nltk==3.9.1
 notebook @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/notebook_1709157811033/work
@@ -152,22 +152,22 @@ opentelemetry-semantic-conventions @ file:///home/conda/feedstock_root/build_art
 opt_einsum==3.4.0
 optree==0.13.0
 overrides @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/overrides_1701806336503/work
-packaging @ file:///C:/b/abs_cc1h2xfosn/croot/packaging_1710807447479/work
+packaging==24.2
 pandas @ file:///C:/b/abs_e18w9ay4we/croot/pandas_1732735115740/work/dist/pandas-2.2.3-cp312-cp312-win_amd64.whl#sha256=2c8058e41dda2e7ecfff0740ad1d98f17d528c740f71b038c523a9d24d2321b0
 pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
 paramiko @ file:///home/conda/feedstock_root/build_artifacts/paramiko_1733505604334/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+parso==0.8.4
 pathspec==0.12.1
 patsy==0.5.3
 pillow @ file:///C:/b/abs_95ls_qh4c2/croot/pillow_1714398870615/work
-platformdirs @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/platformdirs_1701797392447/work
+platformdirs==4.3.6
 pluggy==1.5.0
 ply @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/ply_1699473999871/work
 prometheus-client @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/prometheus_client_1699495496669/work
-prompt-toolkit @ file:///C:/b/abs_68uwr58ed1/croot/prompt-toolkit_1704404394082/work
+prompt_toolkit==3.0.50
 protobuf==4.25.3
-psutil @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/psutil_1699482842340/work
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
+psutil==6.1.1
+pure_eval==0.2.3
 pyarrow @ file:///C:/b/abs_cddzecbo0a/croot/pyarrow_1733937783605/work/python
 pyasn1 @ file:///home/conda/feedstock_root/build_artifacts/pyasn1_1733217608156/work
 pyasn1_modules @ file:///home/conda/feedstock_root/build_artifacts/pyasn1-modules_1733324602540/work
@@ -176,7 +176,7 @@ pycountry @ file:///home/conda/feedstock_root/build_artifacts/pycountry_16685315
 pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
 pydub==0.25.1
 pyflakes==3.2.0
-Pygments @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pygments_1699474141968/work
+Pygments==2.19.1
 pylint==3.2.7
 PyNaCl @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pynacl_1699563077212/work
 pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1733777368795/work
@@ -185,14 +185,14 @@ PyQt5==5.15.10
 PyQt5-sip @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pyqt-split_1699478669290/work/pyqt_sip
 PySocks @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pysocks_1699473336188/work
 pytest==8.3.4
-python-dateutil @ file:///C:/b/abs_3au_koqnbs/croot/python-dateutil_1716495777160/work
+python-dateutil==2.9.0.post0
 python-json-logger @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/python-json-logger_1699543626759/work
 pytz @ file:///C:/b/abs_6ap4tsz1ox/croot/pytz_1713974360290/work
 pyu2f @ file:///home/conda/feedstock_root/build_artifacts/pyu2f_1733738580568/work
-pywin32==305.1
+pywin32==308
 pywinpty @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pywinpty_1699496010557/work/target/wheels/pywinpty-2.0.10-cp312-none-win_amd64.whl#sha256=227f3f94f568f63ab3418c02875c4b429a0a3638e1a2917a22bb8e4ba1762179
 PyYAML @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pyyaml_1699479991712/work
-pyzmq @ file:///C:/b/abs_89aq69t0up/croot/pyzmq_1705605705281/work
+pyzmq==26.2.0
 qtconsole @ file:///C:/b/abs_03f8rg9vl6/croot/qtconsole_1709231218069/work
 QtPy @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/qtpy_1701807198514/work
 referencing @ file:///C:/Users/dev-admin/py312/referencing_1706802962559/work
@@ -213,7 +213,7 @@ Send2Trash @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/send2
 setuptools==69.5.1
 shap==0.45.1
 sip @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/sip_1699475590677/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+six==1.17.0
 slicer==0.0.8
 smart-open==7.0.5
 smmap @ file:///home/conda/feedstock_root/build_artifacts/smmap_1634310307496/work
@@ -221,7 +221,7 @@ sniffio @ file:///C:/b/abs_3akdewudo_/croot/sniffio_1705431337396/work
 soupsieve @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/soupsieve_1699496611169/work
 SQLAlchemy @ file:///C:/b/abs_7duxw5rxx8/croot/sqlalchemy_1725885067126/work
 sqlparse @ file:///home/conda/feedstock_root/build_artifacts/sqlparse_1734007102193/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
+stack-data==0.6.3
 statsmodels @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/statsmodels_1701812608721/work
 sympy==1.13.3
 tensorboard==2.18.0
@@ -240,9 +240,9 @@ tokenizers==0.20.0
 tomli==2.0.1
 tomlkit==0.13.2
 torch==2.4.1
-tornado @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/tornado_1699496839511/work
+tornado==6.4.2
 tqdm==4.66.6
-traitlets==5.14.2
+traitlets==5.14.3
 transformers==4.45.2
 types-python-dateutil==2.8.19.20240106
 typing_extensions @ file:///C:/b/abs_0as9mdbkfl/croot/typing_extensions_1715268906610/work
@@ -251,7 +251,7 @@ unicodedata2 @ file:///C:/b/abs_b6apldlg7y/croot/unicodedata2_1713212998255/work
 uri-template==1.3.0
 urllib3 @ file:///C:/b/abs_8e4z8_gh1l/croot/urllib3_1715636317140/work
 waitress @ file:///home/conda/feedstock_root/build_artifacts/waitress_1733928600890/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+wcwidth==0.2.13
 webcolors==1.13
 webencodings @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/webencodings_1699497069416/work
 websocket-client @ file:///C:/b/abs_5dmnxxoci9/croot/websocket-client_1715878351319/work
