--- a/.github/workflows/ci-venv.yml
+++ b/.github/workflows/ci-venv.yml
@@ -31,5 +31,5 @@ jobs:
 
     - name: Run tests
       run: |
-        source .venv/Scripts/activate
+        .venv\Scripts\activate
         pytest tests/
