--- a/.github/workflows/ci-venv.yml
+++ b/.github/workflows/ci-venv.yml
@@ -25,11 +25,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m venv .venv
-        source .venv/Scripts/activate
+        .\.venv\Scripts\Activate.ps1
         pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Run tests
       run: |
-        .venv/Scripts/activate
+        .\.venv\Scripts\Activate.ps1
         pytest tests/
