--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ Markdown==3.7
 MarkupSafe==3.0.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
+missingno==0.5.2
 mistune==3.1.0
 mlflow==2.19.0
 mlflow-skinny==2.19.0
