--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,12 @@ jobs:
         source .venv/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
-        pip install -r <(grep -v "pywin32" requirements.txt)
         pip install gunicorn
+
+    - name: Remove Windows-specific dependencies
+      run: |
+        sed -i '/^pywin32==/d' requirements.txt
+        sed -i '/^pywinpty==/d' requirements.txt
 
     - name: Run unit tests
       run: |
