--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,7 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ vars.AZURE_WEBAPP_NAME }}
+        resource-group-name: ${{ vars.RESOURCE_GROUP }}
         package: .
 
     - name: Wait for API to be ready
