--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,10 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+    - name: Debug Azure WebApp Existence
+      run: |
+        az webapp show --name ${{ vars.AZURE_WEBAPP_NAME }} --resource-group ${{ vars.RESOURCE_GROUP }} --output table
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -49,12 +53,18 @@ jobs:
         source .venv/bin/activate
         pytest tests/test_api.py
 
+    - name: Create ZIP Package
+      run: |
+        zip -r app_package.zip .
+
     - name: Deploy to Azure Web App
+      timeout-minutes: 10
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ vars.AZURE_WEBAPP_NAME }}
         resource-group-name: ${{ vars.RESOURCE_GROUP }}
-        package: .
+        package: app_package.zip
+        # package: .
 
     - name: Wait for API to be ready
       run: |
