--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,14 @@ jobs:
     #   run: |
     #     zip -r app_package.zip .
 
+    - name: Test API locally before ZIP
+      run: |
+        source .venv/bin/activate
+        gunicorn -w 2 -k uvicorn.workers.UvicornWorker api.app:app --bind 0.0.0.0:8000 &
+        sleep 5
+        curl -I http://127.0.0.1:8000 || (echo "API FAILED TO START LOCALLY"; exit 1)
+        pkill gunicorn
+
     - name: Create ZIP Package
       run: |
         zip -r app_package.zip . -x \
@@ -71,6 +79,16 @@ jobs:
         "mlruns/*" \
         "tests/*"
 
+    - name: Check ZIP size
+      run: ls -lh app_package.zip
+
+    - name: Set execute permission for startup script  # 📌 Ajout ici
+      run: chmod +x api/startup.sh
+
+    - name: Restart Azure Web App
+      run: |
+        az webapp restart --name ${{ vars.AZURE_WEBAPP_NAME }} --resource-group ${{ vars.RESOURCE_GROUP }}
+
     - name: Deploy to Azure Web App
       timeout-minutes: 10
       uses: azure/webapps-deploy@v2
@@ -78,7 +96,7 @@ jobs:
         app-name: ${{ vars.AZURE_WEBAPP_NAME }}
         resource-group-name: ${{ vars.RESOURCE_GROUP }}
         package: app_package.zip
-        # package: .
+        startup-command: "./api/startup.sh"
 
     - name: Configure Azure Web App startup
       run: |
