--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,12 +69,13 @@ jobs:
         "*.log*" \
         "mlruns/*" \
         "tests/*"
+        !startup.sh
 
     - name: Check ZIP size
       run: ls -lh app_package.zip
 
     - name: Set execute permission for startup script  # 📌 Ajout ici
-      run: chmod +x api/startup.sh
+      run: chmod +x startup.sh
 
     - name: Debug Startup File
       run: |
@@ -92,11 +93,11 @@ jobs:
         app-name: ${{ vars.AZURE_WEBAPP_NAME }}
         resource-group-name: ${{ vars.RESOURCE_GROUP }}
         package: app_package.zip
-        startup-command: "./api/startup.sh"
+        startup-command: "./startup.sh"
 
     - name: Configure Azure Web App startup
       run: |
-        az webapp config set --name ${{ vars.AZURE_WEBAPP_NAME }} --resource-group ${{ vars.RESOURCE_GROUP }} --startup-file "bash startup.sh"
+        az webapp config set --name ${{ vars.AZURE_WEBAPP_NAME }} --resource-group ${{ vars.RESOURCE_GROUP }} --startup-file "./startup.sh"
 
     - name: Wait for API to be ready
       run: |
