--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,13 @@ jobs:
       with:
         python-version: 3.12
 
-    - name: Install dependencies
+    - name: Install dependencies (production)
       run: |
         python -m venv .venv
         source .venv/bin/activate
         pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install gunicorn numpy
+        pip install -r requirements-prod.txt
+        pip install pytest gunicorn numpy
 
     - name: Start API for testing
       run: |
