debug du déploiement

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,7 +67,11 @@ jobs:
         "*.db*" \
         "*.log*" \
         "mlruns/*" \
-        "tests/*"
+        "tests/*" \
+        "Farizon_David_2_notebook_modelisation_012025.ipynb" \
+        "api/openapi.yaml" \
+        "api/Farizon_David_5_notebook_test_API_0125.ipynb" \*""
+
 
     - name: Check ZIP size
       run: ls -lh app_package.zip
