--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,9 @@ jobs:
       run: |
         python -m venv .venv
         source .venv/bin/activate
-        pip install --upgrade pip
+        pip install --upgrade pip setuptools wheel
         pip install -r requirements-prod.txt
-        pip install pytest gunicorn numpy
+        pip install pytest gunicorn
 
     - name: Start API for testing
       run: |
