--- a/.github/workflows/api-deployment_prediction-api.yml
+++ b/.github/workflows/api-deployment_prediction-api.yml
@@ -28,11 +28,14 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-      
+
       - name: Install dependencies
         run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+
+      - name: Run unit tests
+        run: |
+          source .venv/bin/activate
+          pytest tests/test_api.py
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -64,7 +67,7 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -78,4 +81,3 @@ jobs:
         with:
           app-name: 'prediction-api'
           slot-name: 'Production'
-          
