--- a/.github/workflows/api-deployment_prediction-api.yml
+++ b/.github/workflows/api-deployment_prediction-api.yml
@@ -40,11 +40,11 @@ jobs:
           gunicorn -w 2 api.app:app --bind 127.0.0.1:8000 &
           sleep 5
 
-      - name: Run unit tests
-        run: |
-          source venv/bin/activate
-          pytest tests/test_api.py
-          pkill gunicorn
+      # - name: Run unit tests
+      #   run: |
+      #     source venv/bin/activate
+      #     pytest tests/test_api.py
+      #     pkill gunicorn
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
