--- a/.github/workflows/api-deployment_prediction-api.yml
+++ b/.github/workflows/api-deployment_prediction-api.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
            pip install --upgrade pip
-           pip install -r requirements.txt
+           pip install -r requirements-prod.txt
 
       - name: Start local API
         run: |
@@ -49,6 +49,9 @@ jobs:
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
+
+      - name: Check ZIP size
+        run: ls -lh release.zip
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
