--- a/.github/workflows/api-deployment_prediction-api.yml
+++ b/.github/workflows/api-deployment_prediction-api.yml
@@ -7,6 +7,7 @@ name: Build and deploy Python app to Azure Web App - prediction-api
 on:
   push:
     branches:
+      - main
       - api-deployment
   workflow_dispatch:
 
